--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ h1 {
   font-size: 12px;
   margin: 15px 0;
   transition: all 0.3s ease;
-  padding-bottom: 20px; /* ✅ espace réservé pour la flèche */
+  padding-bottom: 25px; /* ✅ espace réservé pour la flèche */
 }
 
 /* Tronquage à 4 lignes */
@@ -200,7 +200,7 @@ h1 {
 /* Icône ▼ / ▲ positionnée en bas à droite */
 .toggle-icon {
   position: absolute;
-  bottom: 0;
+  bottom: 6px;
   right: 0;
   font-weight: bold;
   cursor: pointer;
@@ -358,6 +358,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
