--- a/style.css
+++ b/style.css
@@ -179,18 +179,14 @@ h1 {
 /* 📄 Paragraphe principal */
 .synopsis-text {
   font-size: 12px;
+  text-align: justify;
   overflow: visible;
   max-height: none;
-  display: block;
 }
 
-/* 💬 Passages importants */
-.synopsis-important {
-  font-size: 13px;
+.synopsis-text strong {
   font-weight: bold;
   color: #222;
-  margin: 10px 0;
-  text-align: justify;
 }
 
 .seances {
@@ -301,6 +297,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
