--- a/style.css
+++ b/style.css
@@ -164,9 +164,7 @@ h1 {
 /* 🧱 Conteneur du synopsis */
 .synopsis-container {
   position: relative;
-  width: 100%;
-  max-width: 600px;
-  margin: 0 auto;
+  width: 100%
   text-align: justify;
   padding-bottom: 5px; /* espace pour la flèche */
   will-change: transform;
@@ -297,6 +295,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
