--- a/style.css
+++ b/style.css
@@ -278,13 +278,13 @@ h1 {
 
 .bientot-affiche-banner {
   display: inline-block;
-  background-color: #eeeeee;           /* gris clair */
-  border-left: 5px solid #cccccc;         /* gris moyen */
-  border-right: 5px solid #cccccc;
+  background-color: #eee;           /* gris clair */
+  border-left: 5px solid #666;         /* gris moyen */
+  border-right: 5px solid #666;
   padding: 4px 8px;
   font-weight: bold;
   border-radius: 4px;
-  color: #666666;                         /* texte noir */
+  color: #000;                         /* texte noir */
   white-space: nowrap;                /* empêche le retour à la ligne */
   margin: 0px 0 0 0;                 /* top: 10px, bottom: 0, left/right: 0 */
   max-width: max-content;  
@@ -295,6 +295,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
