--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ p.textlegende {
     margin-top: 10px;
 	margin-bottom: 10px;
     max-width: 125px;
+	max-height: 60px;
     height: auto;
     border-radius: 4px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
@@ -295,6 +296,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
