--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ h1 {
 /* 🧱 Conteneur du synopsis */
 .synopsis-container {
   position: relative;
-  width: 100%
+  width: 100%;
   text-align: justify;
   padding-bottom: 5px; /* espace pour la flèche */
   will-change: transform;
@@ -186,6 +186,40 @@ h1 {
   font-size: 13px;
   font-weight: bold;
   color: #222;
+}
+
+/* Troncage uniquement sur petit écran */
+@media screen and (max-width: 600px) {
+  .synopsis-text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    transition: all 0.3s ease;
+  }
+
+  .synopsis.expanded .synopsis-text {
+    -webkit-line-clamp: unset;
+  }
+}
+
+/* Texte mis en évidence extrait de **...** */
+.synopsis-highlight {
+  font-weight: bold;
+  font-size: 13px;
+  color: #222;
+  margin-bottom: 4px;
+}
+
+/* Flèche d’expansion */
+.toggle-arrow {
+  cursor: pointer;
+  font-size: 1.2em;
+  user-select: none;
+  display: inline-block;
+  margin-top: 5px;
+  color: #007BFF;
 }
 
 .seances {
@@ -296,6 +330,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
