--- a/style.css
+++ b/style.css
@@ -240,6 +240,7 @@ h1 {
 
 .seances {
 	display: flex;
+	margin-top: 5px;
 	flex-direction: column;
 	gap: 10px;
 }
@@ -337,7 +338,7 @@ h1 {
   border-radius: 4px;
   color: #000;                         /* texte noir */
   white-space: nowrap;                /* empêche le retour à la ligne */
-  margin: 5px 0 0 0;                 /* top: 5px, bottom: 0, left/right: 0 */
+  margin: 10px 0 0 0;                 /* top: 10px, bottom: 0, left/right: 0 */
   max-width: max-content;  
 }
 
@@ -346,6 +347,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
