--- a/style.css
+++ b/style.css
@@ -197,15 +197,11 @@ h1 {
   margin-bottom: 4px;
 }
 
-/* Par défaut : cacher la flèche sur les grands écrans 
+/* Par défaut : cacher la flèche sur les grands écrans */
 .toggle-arrow {
   line-height: 1; 
   display: none;
-} */
-
-.toggle-arrow {
-  display: inline-block !important;
-}
+} 
 
 /* Troncage uniquement sur petit écran */
 @media screen and (max-width: 600px) {
@@ -349,6 +345,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
