--- a/style.css
+++ b/style.css
@@ -210,8 +210,8 @@ h1 {
   /* font-weight: bold; */
   font-size: 13px;
   color: #222;
+  margin-top: 1px;
   margin-bottom: 1px;
-  line-height: 1.3; /* ou 1.2 pour un look plus dense */
 }
 
 /* Par défaut : cacher la flèche sur les grands écrans */
@@ -348,6 +348,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
