--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ h1 {
     cursor: pointer;
     font-size: 0.9em;
     user-select: none;
-    color: #666;
+    color: #ccc;
     margin-top: 0px; /* réduit l'espace vertical */
   }
 }
@@ -348,6 +348,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
