--- a/style.css
+++ b/style.css
@@ -232,9 +232,9 @@ h1 {
   .toggle-arrow {
     display: inline-block;
     cursor: pointer;
-    font-size: 0.9em;
+    font-size: 1.2em;
     user-select: none;
-    color: #ccc;
+    color: #666;
     margin-top: 0px; /* réduit l'espace vertical */
   }
 }
@@ -348,6 +348,7 @@ h1 {
   vertical-align: middle;
   text-align: left;
 }
+
 
 
 
