--- a/style.css
+++ b/style.css
@@ -270,13 +270,43 @@ h1 {
 	flex-wrap: wrap;
 	gap: 10px;
 }
-.seance-label {
+
+/*.seance-label {
 	display: inline-block;
 	background-color: #ccc;
 	color: #666;
 	padding: 5px 10px;
     vertical-align: middle;	
+}*/
+
+.seance-label {
+    position: relative;
+    cursor: pointer;
 }
+
+.seance-label .tooltip {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    bottom: 125%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 5px 8px;
+    border-radius: 4px;
+    white-space: nowrap;
+    font-size: 0.85em;
+    z-index: 10;
+    transition: opacity 0.3s ease;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.seance-label:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+}
+
 .attributs-label {
 	display: inline-block;
 	white-space: break-spaces;
@@ -353,6 +383,7 @@ h1 {
   font-size: 0.9em;
   color: #666;
 }
+
 
 
 
