--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ h1 {
     padding: 5px 10px;
     vertical-align: middle;
     position: relative; /* nécessaire pour positionner la tooltip */
-    border-radius: 4px;
+    /* border-radius: 4px; */
     overflow: visible; /* s'assurer que la tooltip ne soit pas coupée */
 }
 
@@ -390,6 +390,7 @@ h1 {
   font-size: 0.9em;
   color: #666;
 }
+
 
 
 
