--- a/style.css
+++ b/style.css
@@ -382,8 +382,10 @@ h1 {
 
 .prochaine-representation-banner {
   background-color: #edf6ff; /* bleu pâle */	
-  border-left: 5px solid #004080;  /* bleu foncé */
-  border-right: 5px solid #004080; /* bleu foncé */
+  /*border-left: 5px solid #004080;  bleu foncé
+  border-right: 5px solid #004080; bleu foncé */
+  border-left: 5px solid #6699cc;  /* bleu pâle */
+  border-right: 5px solid #6699cc; /* bleu pâle */
   color: #000; /* texte bleu foncé */
   padding: 5px 10px;
   border-radius: 4px;
@@ -403,6 +405,7 @@ h1 {
   font-size: 0.9em;
   color: #666;
 }
+
 
 
 
